--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "chat.promptFiles": true
+    "chat.promptFiles": true,
+    "github.copilot.chat.includeAnyFile": true,
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": true,
+        "markdown": true,
+        "scminput": true,
+        "python": true,
+        "jupyter": true
+    }
 }
