feat: Completar transformación Semana 6 - Introducción a Exploración de Datos
✅ Estructura de 3 sesiones de 50 minutos para nivel preparatoria
✅ Sesión 1: Fundamentos de exploración con dataset futbolístico realista
✅ Sesión 2: Técnicas de análisis exploratorio y visualización avanzada
✅ Dataset de 200 partidos de fútbol europeo con 20 equipos
✅ Configuración profesional del entorno (pandas, numpy, matplotlib, seaborn)
✅ Análisis estadístico descriptivo completo con interpretación
✅ Visualizaciones exploratorias: histogramas, box plots, scatter plots
✅ Matriz de correlaciones con heatmap y análisis de relaciones
✅ Actividades prácticas estructuradas para cada sesión
✅ Política sin emojis y variables en español aplicada

Incluye:
- Inspección inicial: estructura, tipos de datos, valores faltantes
- Estadísticas descriptivas: media, mediana, desviación estándar
- Variables derivadas: total_goles, diferencia_goles, resultado
- Análisis de ventaja local con datos numéricos
- Comparación entre temporadas y equipos
- Identificación de patrones defensivos vs ofensivos
- Correlaciones significativas entre variables
- Interpretación crítica de resultados

Configuración VS Code actualizada para mejor experiencia de desarrollo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,9 @@
         "scminput": true,
         "python": true,
         "jupyter": true
-    }
+    },
+    "github.copilot.chat.codesearch.enabled": true,
+    "github.copilot.chat.agent.thinkingTool": true,
+    "github.copilot.chat.editor.temporalContext.enabled": true,
+    "github.copilot.chat.edits.temporalContext.enabled": true
 }
