fix: Eliminar TODOS los emojis y centralizar instrucciones
- Eliminar carpetas .ai y .claude por completo
- Centralizar toda la documentación en .github/copilot-instructions.md
- Remover TODOS los emojis de contenido/bloque-1/semana-1/
- Mantener metodología socrática sin elementos visuales infantiles
- Contenido 100% profesional para nivel preparatoria
- Instrucciones completas disponibles en un solo archivo
- Variables en español y contexto futbolístico conservado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,14 @@
     "github.copilot.chat.codesearch.enabled": true,
     "github.copilot.chat.agent.thinkingTool": true,
     "github.copilot.chat.editor.temporalContext.enabled": true,
-    "github.copilot.chat.edits.temporalContext.enabled": true
+    "github.copilot.chat.edits.temporalContext.enabled": true,
+    "github.copilot.chat.enableRetryAfterFilteredResponse": true,
+    "github.copilot.chat.generateTests.codeLens": true,
+    "github.copilot.chat.languageContext.fix.typescript.enabled": true,
+    "github.copilot.chat.languageContext.inline.typescript.enabled": true,
+    "github.copilot.chat.languageContext.typescript.enabled": true,
+    "github.copilot.chat.notebook.followCellExecution.enabled": true,
+    "intellicodeCompletions.runAlongsideCopilot": true,
+    "notebook.defaultFormatter": "ms-python.black-formatter",
+    "python.analysis.addHoverSummaries": true
 }
