Enables Pylance and full Python doc analysis support
Switches Python language server to Pylance for enhanced analysis,
enables support for all Python documents, and sets Black as the
default formatter for both Python and general files.
Improves developer experience through better code completion
and formatting consistency.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,8 @@
     "github.copilot.chat.notebook.followCellExecution.enabled": true,
     "intellicodeCompletions.runAlongsideCopilot": true,
     "notebook.defaultFormatter": "ms-python.black-formatter",
-    "python.analysis.addHoverSummaries": true
+    "python.analysis.addHoverSummaries": true,
+    "python.analysis.supportAllPythonDocuments": true,
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "python.languageServer": "Pylance"
 }
