Enables integrated terminal shell integration
Improves developer workflow by activating shell integration
in the integrated terminal, allowing for enhanced command
line features and a smoother terminal experience within
the editor.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,5 +24,6 @@
     "python.analysis.addHoverSummaries": true,
     "python.analysis.supportAllPythonDocuments": true,
     "editor.defaultFormatter": "ms-python.black-formatter",
-    "python.languageServer": "Pylance"
+    "python.languageServer": "Pylance",
+    "terminal.integrated.shellIntegration.enabled": true
 }
