feat: implementar herramientas profesionales de conversión notebook-to-pdf
- Agregar herramientas/notebook-to-pdf/ con conversión inteligente con cache
- Incluir suite completa de tests (14 test cases)
- Documentación profesional (README, USAGE_GUIDE, TECHNICAL_DETAILS, INSTALLATION)
- Integración con Makefile del proyecto principal
- Scripts especializados: convert.py, smart_convert.py, convert.sh
- Soporte para múltiples motores LaTeX (XeLaTeX, PDFLaTeX, LuaLaTeX)
- Eliminar scripts/ redundante - funcionalidad supersedida por herramientas/

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,6 @@
     "python.languageServer": "Pylance",
     "terminal.integrated.shellIntegration.enabled": true,
     "[markdown]": {
-        "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
+        "editor.defaultFormatter": null
     }
 }
