feat: añadir conversión masiva por directorio a py-to-marp
🚀 Nuevas capacidades de conversión masiva:
- Opción --directory para convertir cualquier carpeta con archivos .py
- Función convert-dir en Makefile para facilitar uso
- Conversión recursiva de subdirectorios
- Modo silencioso para conversión masiva con resumen de resultados
- Manejo de errores individual por archivo

🛠️ Mejoras técnicas:
- Refactorizar convert.py con funciones separadas
- Validación robusta de directorios y archivos
- Contadores de éxito/error para feedback claro
- Tipos Optional para mayor claridad de código

📖 Ejemplos de uso nuevos:
- python convert.py --directory ./mi_carpeta --config educativo
- make convert-dir DIR=../../contenido/bloque-1 CONFIG=taller
- Conversión masiva con feedback de progreso

Soluciona la necesidad de convertir directorios completos de una vez,
manteniendo flexibilidad de configuraciones por uso específico.

--- a/herramientas/py-to-marp/Makefile
+++ b/herramientas/py-to-marp/Makefile
@@ -64,6 +64,22 @@ convert-all:  ## Convierte todos los archivos .py del contenido (usar CONFIG=con
 	done
 	@echo "✅ Conversión masiva completada"
 
+convert-dir:  ## Convierte todos los archivos .py de un directorio específico (usar DIR=path CONFIG=config)
+	@if [ -z "$(DIR)" ]; then \
+		echo "❌ Error: especifica DIR=path/to/directory"; \
+		exit 1; \
+	fi
+	@if [ ! -d "$(DIR)" ]; then \
+		echo "❌ Error: el directorio $(DIR) no existe"; \
+		exit 1; \
+	fi
+	@echo "🔄 Convirtiendo archivos .py en $(DIR)..."
+	@find "$(DIR)" -name "*.py" -type f | while read file; do \
+		echo "   Procesando $$file"; \
+		$(PYTHON) $(CONVERTER) "$$file" --config $(or $(CONFIG),educativo); \
+	done
+	@echo "✅ Conversión de directorio completada"
+
 clean:  ## Limpia archivos .md generados
 	@echo "🧹 Limpiando archivos .md generados..."
 	@find $(CONTENIDO_DIR) -name "*.md" -type f -delete
