Renames project and updates author info
Updates the project name to reflect its new branding
and provides accurate author information.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "ciencia-datos-futbol-preparatoria"
+name = "prepatec-soccer-analytics"
 version = "5.0.0"
 description = "Curso de Ciencia de Datos aplicada al Fútbol para estudiantes de preparatoria usando metodología socrática"
 authors = [
-    {name = "Tecnológico de Monterrey", email = ""},
+    {name = "Juliho C.C.", email = "julihocc@yahoo.com"},
 ]
 readme = "README.md"
 license = {text = "MIT"}
