--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 readme = "README.md"
 license = {text = "MIT"}
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
     "pandas>=1.3.0",
     "numpy>=1.21.0",
@@ -15,6 +15,7 @@ dependencies = [
     "seaborn>=0.11.0",
     "scikit-learn>=1.0.0",
     "jupyter>=1.0.0",
+    "txttoqti",
 ]
 keywords = ["ciencia-datos", "futbol", "educacion", "preparatoria", "python", "machine-learning"]
 classifiers = [
@@ -24,10 +25,9 @@ classifiers = [
     "Topic :: Scientific/Engineering :: Information Analysis",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 
 [project.urls]
@@ -42,3 +42,6 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools]
 packages = ["contenido"]
 include-package-data = true
+
+[tool.uv.sources]
+txttoqti = { git = "https://github.com/julihocc/txttoqti.git", rev = "main" }
