feat: convert contenido folder to submodule prepatec-soccer-analytics-lessons
- Moved all educational content to separate repository
- Added contenido as submodule pointing to prepatec-soccer-analytics-lessons
- Maintains same folder structure while enabling independent versioning

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "tec-innovacion-educativa"]
 	path = tec-innovacion-educativa
 	url = https://github.com/julihocc/tec-innovacion-educativa
+[submodule "contenido"]
+	path = contenido
+	url = https://github.com/julihocc/prepatec-soccer-analytics-lessons.git
