--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "ipykernel>=7.0.1",
+    "jupyter>=1.1.1",
     "jupytext>=1.17.3",
     "matplotlib>=3.10.7",
+    "notebook>=7.4.7",
     "numpy>=2.2.6",
     "pandas>=2.3.3",
     "scikit-learn>=1.7.2",
